--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Code presented during Sencha's TechTalk on GraphQL, 8/31/2017",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "apollo": "cd packages/apollo-example && npm start",
+    "postinstall": "lerna bootstrap"
   },
   "repository": {
     "type": "git",
