--- a/packages/apollo-example/package.json
+++ b/packages/apollo-example/package.json
@@ -43,7 +43,8 @@
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "sequelize": "^4.2.1",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "server": "^1.0.0"
   },
   "devDependencies": {
     "@extjs/reactor-babel-plugin": "^1.1.1",
