--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "apollo": "cd packages/apollo-example && npm start",
+    "relay": "cd packages/relay-example && npm start",
     "postinstall": "lerna bootstrap"
   },
   "repository": {
