--- a/packages/relay-example/package.json
+++ b/packages/relay-example/package.json
@@ -10,7 +10,9 @@
     "debug": "babel-node --inspect=5858 --debug-brk --nolazy server --presets es2015 stage-2",
     "build": "npm run clean && cross-env NODE_ENV=production webpack --env.prod=true",
     "build:sdk": "touch build/ext-react/app.json",
-    "prod": "cross-env NODE_ENV=production node server"
+    "prod": "cross-env NODE_ENV=production node server",
+    "relay": "relay-compiler --src ./src --schema ../server/schema.gql",
+    "update-schema": "babel-node ./scripts/updateSchema.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
     "casual": "^1.5.14",
     "express": "4.13.4",
     "graphql": "^0.10.0",
+    "graphql-relay": "^0.5.2",
     "graphql-server-express": "^0.9.0",
     "graphql-tag": "^2.4.2",
     "graphql-tools": "^1.0.0",
@@ -42,6 +45,7 @@
     "react-apollo": "^1.4.3",
     "react-dom": "^15.4.0",
     "react-redux": "^5.0.3",
+    "react-relay": "^1.1.0",
     "redux": "^3.6.0",
     "sequelize": "^4.2.1",
     "server": "^1.0.0",
@@ -53,6 +57,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-relay": "^1.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
@@ -63,6 +68,7 @@
     "html-webpack-plugin": "^2.24.1",
     "nodemon": "^1.9.1",
     "open-browser-webpack-plugin": "0.0.5",
+    "relay-compiler": "^1.1.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.5.1",
