--- a/packages/relay-example/package.json
+++ b/packages/relay-example/package.json
@@ -29,25 +29,15 @@
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
     "body-parser": "^1.17.2",
-    "casual": "^1.5.14",
-    "express": "4.13.4",
-    "graphql": "^0.10.0",
     "graphql-relay": "^0.5.2",
-    "graphql-server-express": "^0.9.0",
-    "graphql-tag": "^2.4.2",
-    "graphql-tools": "^1.0.0",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react": "^15.4.0",
-    "react-apollo": "^1.4.3",
     "react-dom": "^15.4.0",
     "react-redux": "^5.0.3",
     "react-relay": "^1.1.0",
     "redux": "^3.6.0",
-    "sequelize": "^4.2.1",
-    "server": "^1.0.0",
-    "sqlite3": "^3.1.8"
+    "server": "^1.0.0"
   },
   "devDependencies": {
     "@extjs/reactor-babel-plugin": "^1.1.1",
@@ -64,7 +54,6 @@
     "cross-env": "^5.0.0",
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.24.1",
-    "nodemon": "^1.9.1",
     "open-browser-webpack-plugin": "0.0.5",
     "relay-compiler": "^1.1.0",
     "rimraf": "^2.6.1",
